--- a/index.html
+++ b/index.html
@@ -12,14 +12,37 @@
       }
 
       body {
-        background-color: navy;
+        background-color: #000050;
       }
+      .yellow-color {
+        color: yellow;
+      }
+
+      .important:hover {
+        font-weight: bold;
+
+      }
+      #final-thought {
+        color: orange;
+      }
+
+      a[href="https://www.weather.gov/"]:hover {
+        background-color: pink;
+      }
+
+      .link {
+        color: #00ff00;
+      }
+
     </style>
   </head>
   <body>
     <!-- include two <p> elements with some text, and an <h1>. The topic of the content is up to you.-->
     <h1>Welcome to the 90s</h1>
-    <p>lorem ipsum</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p class="important hover">lorem ipsum</p>
+    <p class="yellow-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <p id="final-thought"> We see a unique style applied here using an ID selector.</p>
+    <a  href="https://www.weather.gov/">Jump to National Weather Service</a>
+    <p class="link" >Test</p>
   </body>
 </html>
