add external stylesheet and images

--- a/index.html
+++ b/index.html
@@ -3,38 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
-    <style>
-      h1 {
-        color: red;
-      }
-      p {
-        color: cyan;
-      }
-
-      body {
-        background-color: #000050;
-      }
-      .yellow-color {
-        color: yellow;
-      }
-
-      .important:hover {
-        font-weight: bold;
-
-      }
-      #final-thought {
-        color: orange;
-      }
-
-      a[href="https://www.weather.gov/"]:hover {
-        background-color: pink;
-      }
-
-      .link {
-        color: #00ff00;
-      }
-
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
   </head>
   <body>
     <!-- include two <p> elements with some text, and an <h1>. The topic of the content is up to you.-->
@@ -43,6 +12,9 @@
     <p class="yellow-color">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p id="final-thought"> We see a unique style applied here using an ID selector.</p>
     <a  href="https://www.weather.gov/">Jump to National Weather Service</a>
-    <p class="link" >Test</p>
+    <br>
+    <a class="link"href="https://www.nasa.gov/">Jump to NASA</a>
+    <br>
+    <img src="images/banner-bluehex.png" alt="blue banner with light blue bokeh hexagons">
   </body>
 </html>
